<resources>
    <string name="code">en</string>
    <string name="app_name">Persian Calendar</string>
    <string name="widget_name">Persian Calendar</string>
    <string name="widget_mini_name">Persian Calendar (mini)</string>
    <string name="widget_age_name">Persian Calendar (age)</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="accept">OK</string>
    <string name="add">Add</string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
    <string name="continue_button">Continue</string>
    <string name="outdated_app">Due to being outdated, things can be inaccurate</string>
    <string name="update">Update</string>
    <string name="calendar">Calendar</string>
    <string name="date_converter">Date Converter</string>
    <string name="converter">Converter</string>
    <string name="compass">Compass</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="add_event">Add event</string>
    <string name="not_supported_action">The device doesn’t support this action</string>
    <string name="today">Today</string>
    <string name="return_to_today">Return to today</string>
    <string name="search_in_events">Search in events</string>
    <string name="days_distance">Distance</string>
    <string name="start_of_year_diff">%1$s days (~%2$s weeks or %3$s months) from start of the year</string>
    <string name="end_of_year_diff">%1$s days (~%2$s weeks or %3$s months) to end of the year</string>
    <string name="year_name">Year name</string>
    <string name="animal_year_name_monkey">Monkey</string>
    <string name="animal_year_name_rooster">Rooster</string>
    <string name="animal_year_name_dog">Dog</string>
    <string name="animal_year_name_pig">Pig</string>
    <string name="animal_year_name_rat">Rat</string>
    <string name="animal_year_name_ox">Ox</string>
    <string name="animal_year_name_tiger">Tiger</string>
    <string name="animal_year_name_rabbit">Rabbit</string>
    <string name="animal_year_name_dragon">Dragon</string>
    <string name="animal_year_name_snake">Snake</string>
    <string name="animal_year_name_horse">Horse</string>
    <string name="animal_year_name_goat">Goat</string>
    <string name="zodiac">Zodiac</string>
    <string name="capricorn">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="moon_in_scorpio">Moon is in Scorpio</string>
    <string name="events">Events</string>
    <string name="no_event">No event or appointment for this day</string>
    <string name="nothing_scheduled">Nothing scheduled</string>
    <string name="warn_if_events_not_set">To select and show preferred holidays and events, visit the Settings</string>
    <string name="ask_calendar_permission">"Would you like to enable your personal events from your device’s calendar?"</string>
    <string name="sunrise_sun_view">Sunrise</string>
    <string name="midday_sun_view">Midday</string>
    <string name="sunset_sun_view">Sunset</string>
    <string name="length_of_day">Daytime</string>
    <string name="remaining_daylight">Remaining</string>
    <string name="n_hours_minutes">%1$sh %2$sm</string>
    <string name="times">Times</string>
    <string name="imsak">Imsak</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="sunset">Sunset</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="midnight">Midnight</string>
    <string name="spring_equinox">Spring equinox time of year %1$s: %2$s</string>
    <string name="select_type_date">Select date type</string>
    <string name="year">Year</string>
    <string name="select_year">Select year</string>
    <string name="month">Month</string>
    <string name="select_month">Select month</string>
    <string name="day">Day</string>
    <string name="select_day">Select day</string>
    <string name="incorrect_date">"The entered day isn’t valid."</string>
    <string name="compass_not_found">Compass sensor not found</string>
    <string name="calibrate_compass_summary">For improving compass sensor accuracy move the phone away from any magnetic objects, tilt and rotate the device back and forth on every axis.</string>
    <string name="level">Level</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="set_location">In order to have Sun and Moon location, and Qibla direction, set the location in the settings.</string>
    <string name="north">North</string>
    <string name="east">East</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="qibla">Qibla</string>
    <string name="pref_widget">Widget</string>
    <string name="pref_notification">Notification</string>
    <string name="pref_interface">Interface</string>
    <string name="language">Language</string>
    <string name="skin">Skin</string>
    <string name="select_skin">Select a skin</string>
    <string name="native_digits">Native Digits</string>
    <string name="enable_native_digits">Enable Native Digits</string>
    <string name="events_summary">Events to show</string>
    <string name="show_device_calendar_events">Personal Calendar Events</string>
    <string name="show_device_calendar_events_summary">Show personal calendar events</string>
    <string name="calendars_priority">Calendars Priority</string>
    <string name="calendars_priority_summary">Set calendars to show priority or hide them</string>
    <string name="astronomy">Astronomy</string>
    <string name="astronomical_info_summary">"Show additional information like constellation, ancient names of years and moon in scorpio"</string>
    <string name="week_number">Week Number</string>
    <string name="week_number_summary">Show week number on calendar</string>
    <string name="week_start">Week Start</string>
    <string name="week_start_summary">Select week start day</string>
    <string name="week_ends">Weekends</string>
    <string name="week_ends_summary">Select weekends days</string>
    <string name="islamic_offset">Islamic offset</string>
    <string name="islamic_offset_summary">Adjust Islamic calendar by adding a number</string>
    <string name="clock_in_24">Clock in 24 hour</string>
    <string name="showing_clock_in_24">Show the clock in 24 hour</string>
    <string name="widget_text_color">Widget Text Color</string>
    <string name="select_widgets_text_color">Select custom color for widgets texts</string>
    <string name="clock_on_widget">Clock on the Widget</string>
    <string name="showing_clock_on_widget">Show clock on the widget</string>
    <string name="iran_time">Iran Time</string>
    <string name="showing_iran_time">Widgets and notifications in Iran time zone</string>
    <string name="customize_widget">Widget Customization</string>
    <string name="which_one_to_show">Which ones to show</string>
    <string name="customize_widget_summary">What to show from notification and widgets to make them more compact</string>
    <string name="ask_user_to_set_location">Set the location in the settings in order to view this place correctly</string>
    <string name="notify_date">Enable Date Notification</string>
    <string name="enable_notify">Persistent notification for all date types</string>
    <string name="notify_date_lock_screen">Show notification on the lock screen</string>
    <string name="notify_date_lock_screen_summary">Only when a lock screen security method is set.</string>
    <string name="gps_location">Get location from GPS or network</string>
    <string name="gps_location_help">Other options are not needed if this is possible</string>
    <string name="gps_internet_description">"Please enable device’s GPS and Internet connection to find your location.

The app needs this only once, however, if you move to a new location, accessing to GPS and Internet is needed again."</string>
    <string name="wait_for_gps">Please wait… If nothing appeared after one minute you probably should try other options</string>
    <string name="location">Location</string>
    <string name="location_help">If none of them, specify it below</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="altitude_praytime">in meter (optional)</string>
    <string name="coordinates">Coordinates</string>
    <string name="athan">Athan</string>
    <string name="in_city_time">in %1$s</string>
    <string name="pray_methods">Calculation methods</string>
    <string name="pray_methods_calculation">Calculation methods for pray times and Qibla compass</string>
    <string name="athan_gap">Athan Gap</string>
    <string name="athan_gap_summary">How long ahead of the Athan should the alarm be triggered (in minutes)</string>
    <string name="athan_alarm">Athan Alarm</string>
    <string name="athan_alarm_summary">Prayers to trigger the alarm for</string>
    <string name="notification_athan">Athan Notification</string>
    <string name="enable_notification_athan">Show Athan as a notification and device vibration</string>
    <string name="ascending_athan_volume">Ascending athan volume</string>
    <string name="enable_ascending_athan_volume">Athan volume reaches to maximum value in one minute</string>
    <string name="custom_athan">Select Athan</string>
    <string name="abdulbasit">Abdul-Basit Abdel-Samad</string>
    <string name="custom_notification_is_set">Custom notification is just set</string>
    <string name="default_athan">Default Athan</string>
    <string name="default_athan_summary">Return to default Athan</string>
    <string name="returned_to_default">Returned to default</string>
    <string name="athan_volume">Athan Volume</string>
    <string name="athan_volume_summary">Set the volume for the alarm</string>
    <string name="athan_disabled_summary">To set the Athan alarm, choose a location or enter the coordinates above</string>
    <string name="location_access">Location Access</string>
    <string name="phone_location_required">This part of the app needs location permission, if you choose deny you have to enter your latitude and longitude manually.</string>
    <string name="calendar_access">Calendar Access</string>
    <string name="phone_calendar_required">This part of the app needs calendar permission, if you allow it your personal events will be shown on the calendar.</string>
    <string name="version">Version %1$s</string>
    <string name="licenses">License</string>
    <string name="about_license_title">Application License</string>
    <string name="about_license_sum">Check GPLv3 License and other license terms used on Persian Calendar.</string>
    <string name="about_support_developers">Developer Support</string>
    <string name="about_report_bug">Report bug on GitHub</string>
    <string name="about_report_bug_sum">Preferred bug reporting or requesting for new feature, needs a GitHub account</string>
    <string name="about_send_mail">E-Mail</string>
    <string name="about_email_sum">Send personal email to the authors of the app</string>
    <string name="about_no_client">No email client is installed</string>
    <string name="about_developers">Developers (randomly ordered)</string>
</resources>