<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_date_range"
        android:title="@string/calendar" />

    <item
        android:id="@+id/converter"
        android:icon="@drawable/ic_swap_vertical_circle"
        android:title="@string/date_converter" />

    <item
        android:id="@+id/compass"
        android:icon="@drawable/ic_explore"
        android:title="@string/compass" />

    <!--<item-->
        <!--android:id="@+id/reminder"-->
        <!--android:icon="@drawable/ic_watch_later"-->
        <!--android:title="@string/reminder" />-->

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info"
        android:title="@string/about" />

    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_cancel"
        android:title="@string/exit" />

</menu>